--- a/java/Control Flow.ipynb
+++ b/java/Control Flow.ipynb
@@ -1274,7 +1274,7 @@
     "Explanation:\n",
     "In Java, a generator or lazy list is a data structure that generates values on-demand rather than generating them all at once. This can be useful when dealing with large or infinite sequences of values.\n",
     "\n",
-    "In the code snippet above, we define a `NumberGenerator` class that implements the `Iterable` interface. This allows us to use the generator in a for-each loop or with an explicit iterator.\n",
+    "In the code snippet, we define a `NumberGenerator` class that implements the `Iterable` interface. This allows us to use the generator in a for-each loop or with an explicit iterator.\n",
     "\n",
     "The `NumberGenerator` class has an inner class `NumberIterator` that implements the `Iterator` interface. This iterator keeps track of the current number and provides methods to check if there are more numbers (`hasNext()`) and to retrieve the next number (`next()`).\n",
     "\n",
@@ -1388,7 +1388,7 @@
     "Explanation:\n",
     "In Java, the `main()` function is the entry point of a program. It is the first method that gets executed when a Java program starts running. The `main()` function can accept command-line arguments as an array of strings.\n",
     "\n",
-    "In the code snippet above, we define a class named `Main` with a `main()` function that takes an array of strings as an argument named `args`. This array contains the command-line arguments passed to the program.\n",
+    "In the code snippet, we define a class named `Main` with a `main()` function that takes an array of strings as an argument named `args`. This array contains the command-line arguments passed to the program.\n",
     "\n",
     "The code then prints the number of arguments passed to the `main()` function using `args.length`. The `length` property returns the number of elements in the array.\n",
     "\n",
