--- a/java/Docstrings.ipynb
+++ b/java/Docstrings.ipynb
@@ -9,7 +9,7 @@
     "Explanation:\n",
     "In Java, docstrings are commonly referred to as \"Javadoc comments\". They are used to provide documentation for classes, methods, and fields. Javadoc comments start with `/**` and end with `*/`. Within the comments, you can use special tags like `@param`, `@return`, and `@throws` to provide additional information about the function.\n",
     "\n",
-    "In the code snippet above, we have a class `DocstringsFunctionsDemo` that demonstrates the usage of Javadoc comments for functions. The class contains three functions: `sum`, `product`, and `factorial`. Each function has a Javadoc comment that describes its purpose, parameters, and return value.\n",
+    "In the code snippet, we have a class `DocstringsFunctionsDemo` that demonstrates the usage of Javadoc comments for functions. The class contains three functions: `sum`, `product`, and `factorial`. Each function has a Javadoc comment that describes its purpose, parameters, and return value.\n",
     "\n",
     "In the `main` method, we declare two integers `a` and `b` and demonstrate the usage of the `sum` and `product` functions by calling them with `a` and `b` as arguments. We also declare an integer `n` and demonstrate the usage of the `factorial` function by calling it with `n` as an argument.\n",
     "\n",
@@ -207,7 +207,7 @@
     "Explanation:\n",
     "In Java, docstrings are commonly used to provide documentation for packages, classes, methods, constants, inner classes, and enums. They serve as a way to describe the purpose, functionality, parameters, and return values of the code elements.\n",
     "\n",
-    "In the code snippet above:\n",
+    "In the code snippet:\n",
     "- The package is documented with a docstring providing an overview of its purpose and contents.\n",
     "- The class is documented with a docstring providing an overview of its purpose and functionality.\n",
     "- The method `sayHello` is documented with a docstring describing what it does and its parameters.\n",
