--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -99,7 +99,7 @@
     "Explanation:\n",
     "In Java, positional arguments are used to pass values to a method based on their position or order. The method signature defines the number and type of positional arguments it expects.\n",
     "\n",
-    "In the code snippet above, we have two methods that demonstrate the usage of positional arguments. \n",
+    "In the code snippet, we have two methods that demonstrate the usage of positional arguments. \n",
     "\n",
     "The `printFullName` method takes two positional arguments: `firstName` and `lastName`. It simply prints the full name by concatenating the two arguments.\n",
     "\n",
@@ -261,7 +261,7 @@
     "# Variadic Functions\n",
     "In Java, a variadic function is a function that can accept a variable number of arguments of the same type. The ellipsis (`...`) notation is used to denote a variadic parameter in the function signature.\n",
     "\n",
-    "In the code snippet above, we have defined two variadic functions: `sum` and `concatenate`. The `sum` function takes a variable number of integers and returns their sum. The `concatenate` function takes a variable number of strings and concatenates them into a single string.\n",
+    "In the code snippet, we have defined two variadic functions: `sum` and `concatenate`. The `sum` function takes a variable number of integers and returns their sum. The `concatenate` function takes a variable number of strings and concatenates them into a single string.\n",
     "\n",
     "To use a variadic function, you can pass any number of arguments of the specified type separated by commas. The function treats these arguments as an array within the function body.\n",
     "\n",
@@ -337,7 +337,7 @@
     "Explanation:\n",
     "In Java, function overloading allows us to define multiple methods with the same name but different parameters. The compiler determines which method to call based on the number, type, and order of the arguments passed.\n",
     "\n",
-    "In the code snippet above, we have a class `OverloadingExample` that demonstrates function overloading. It contains five methods named `display`, each with a different set of parameters.\n",
+    "In the code snippet, we have a class `OverloadingExample` that demonstrates function overloading. It contains five methods named `display`, each with a different set of parameters.\n",
     "\n",
     "- The first `display` method has no parameters.\n",
     "- The second `display` method takes an integer parameter.\n",
