--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -96,7 +96,7 @@
     "Explanation:\n",
     "In Java, generics allow us to create classes, interfaces, and methods that can work with different types. Sometimes, we may want to explicitly call a generic method with a specific type argument instead of relying on type inference.\n",
     "\n",
-    "In the code snippet above, we have a class `Main` with a generic method `printValue`. This method takes a generic type argument `T` and prints the value passed to it. The `main` method demonstrates various ways to explicitly call the `printValue` method with different type arguments.\n",
+    "In the code snippet, we have a class `Main` with a generic method `printValue`. This method takes a generic type argument `T` and prints the value passed to it. The `main` method demonstrates various ways to explicitly call the `printValue` method with different type arguments.\n",
     "\n",
     "We start by explicitly calling the method with the type argument `String` using the syntax `Main.<String>printValue(\"Hello\")`. This prints `Hello` to the console. \n",
     "\n",
