--- a/java/Language-Specific Features.ipynb
+++ b/java/Language-Specific Features.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "The `Optional` class in Java provides a way to handle situations where a value may or may not be present. It is used to avoid null pointer exceptions and improve code readability.\n",
     "\n",
-    "In the code snippet above, we demonstrate various features of `Optional`:\n",
+    "In the code snippet, we demonstrate various features of `Optional`:\n",
     "\n",
     "1. Creating an `Optional` object:\n",
     "   - `Optional.of(value)` creates an `Optional` object with a non-null value.\n",
