--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -9,7 +9,7 @@
     "Explanation:\n",
     "In Java, the `import` statement is used to bring classes, interfaces, and other members from a package into the current source file. This allows you to use the imported classes without fully qualifying their names.\n",
     "\n",
-    "In the code snippet above, we demonstrate importing built-in libraries in Java. We import the `ArrayList` class from the `java.util` package using the statement `import java.util.ArrayList;`. This allows us to use the `ArrayList` class directly without specifying the full package name.\n",
+    "In the code snippet, we demonstrate importing built-in libraries in Java. We import the `ArrayList` class from the `java.util` package using the statement `import java.util.ArrayList;`. This allows us to use the `ArrayList` class directly without specifying the full package name.\n",
     "\n",
     "We also import all classes from the `java.util` package using the statement `import java.util.*;`. This allows us to use any class from the `java.util` package without specifying the package name.\n",
     "\n",
@@ -243,7 +243,7 @@
     "\n",
     "To use classes or members from another package, the `import` statement is used. It allows you to specify the fully qualified name of the class or package you want to import. You can import a specific class, all classes from a package, or even import static members from a class.\n",
     "\n",
-    "In the code snippet above, we have a `Main` class in the `com.example` package. We import the `MathUtils` class from the `com.example.utils` package using a specific import statement. We also import all classes from the `com.example.utils` package using a wildcard import statement. Additionally, we import the `capitalize` static member from the `com.example.utils.StringUtils` class using a static import statement.\n",
+    "In the code snippet, we have a `Main` class in the `com.example` package. We import the `MathUtils` class from the `com.example.utils` package using a specific import statement. We also import all classes from the `com.example.utils` package using a wildcard import statement. Additionally, we import the `capitalize` static member from the `com.example.utils.StringUtils` class using a static import statement.\n",
     "\n",
     "Inside the `main` method, we demonstrate the usage of the imported classes and static member. We create an instance of the `MathUtils` class and use its `add` method to calculate the sum of two numbers. We also use the `capitalize` static method to capitalize a string.\n",
     "\n",
