--- a/java/Operators.ipynb
+++ b/java/Operators.ipynb
@@ -315,7 +315,7 @@
     "String Concatenation in Java\n",
     "String concatenation is the process of combining two or more strings into a single string. In Java, there are multiple ways to perform string concatenation. The most common approach is using the `+` operator, which can concatenate strings and other data types. Additionally, the `concat()` method can be used to concatenate strings.\n",
     "\n",
-    "In the code snippet above, we demonstrate various scenarios of string concatenation. We start by concatenating two strings using the `+` operator. Then, we show how to concatenate a string with other data types, such as an integer. Next, we concatenate multiple variables to form a full name. We also demonstrate concatenation with empty strings and null values.\n",
+    "In the code snippet, we demonstrate various scenarios of string concatenation. We start by concatenating two strings using the `+` operator. Then, we show how to concatenate a string with other data types, such as an integer. Next, we concatenate multiple variables to form a full name. We also demonstrate concatenation with empty strings and null values.\n",
     "\n",
     "Finally, we showcase the `concat()` method, which can be used as an alternative to the `+` operator for string concatenation.\n",
     "\n",
