--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -9,7 +9,7 @@
     "Console I/O in Java\n",
     "The Java `Console` class provides methods for reading input from the console and printing output to the console. It is commonly used for simple text-based user interactions in command-line applications.\n",
     "\n",
-    "In the code snippet above, we demonstrate various aspects of console I/O using the `Console` class:\n",
+    "In the code snippet, we demonstrate various aspects of console I/O using the `Console` class:\n",
     "\n",
     "1. Reading a line of text from the user using `readLine()`.\n",
     "2. Reading a password from the user using `readPassword()`.\n",
