--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -182,7 +182,7 @@
     "Explanation:\n",
     "In Java, formatted strings can be created using the `printf()` method from `System.out` or the `String.format()` method. These methods allow you to specify placeholders in the string and provide corresponding values to be inserted into those placeholders.\n",
     "\n",
-    "In the code snippet above, we demonstrate the usage of formatted strings with `printf()` and `String.format()`. We start by declaring variables for name, age, and salary. Then, we use `printf()` to print a formatted string with placeholders for name, age, and salary. The `%s`, `%d`, and `%.2f` are format specifiers for string, integer, and floating-point values respectively. The `%.2f` specifies that the floating-point value should be displayed with two decimal places.\n",
+    "In the code snippet, we demonstrate the usage of formatted strings with `printf()` and `String.format()`. We start by declaring variables for name, age, and salary. Then, we use `printf()` to print a formatted string with placeholders for name, age, and salary. The `%s`, `%d`, and `%.2f` are format specifiers for string, integer, and floating-point values respectively. The `%.2f` specifies that the floating-point value should be displayed with two decimal places.\n",
     "\n",
     "Next, we use `String.format()` to create a formatted string and assign it to the `formattedString` variable. We pass the same format string and values as arguments to `String.format()`.\n",
     "\n",
@@ -382,7 +382,7 @@
     "Explanation:\n",
     "In Java, string concatenation is the process of combining two or more strings into a single string. The `+` operator is commonly used for string concatenation. It can be used to concatenate strings, variables, and even other data types.\n",
     "\n",
-    "In the code snippet above, we demonstrate various ways to perform string concatenation. We start by using the `+` operator to concatenate two strings (`str1` and `str2`) and store the result in the `result` variable. We then print the result, which should display \"Hello World\".\n",
+    "In the code snippet, we demonstrate various ways to perform string concatenation. We start by using the `+` operator to concatenate two strings (`str1` and `str2`) and store the result in the `result` variable. We then print the result, which should display \"Hello World\".\n",
     "\n",
     "Next, we show how to concatenate a string with other data types. We declare an `int` variable `number` and concatenate it with a string to create the `message` variable. When we print `message`, it should display \"The answer is: 42\".\n",
     "\n",
