--- a/java/Testing (JUnit-style).ipynb
+++ b/java/Testing (JUnit-style).ipynb
@@ -215,7 +215,7 @@
     "Explanation:\n",
     "In JUnit, we can use the `@BeforeClass` annotation to define a method that will be executed once before any test cases in the test suite. This method is commonly used to set up suite-level data that needs to be shared across multiple test cases.\n",
     "\n",
-    "In the code snippet above, we have a test class `PersistenceTest` with a suite-level data variable `classData`. The `setupSuite()` method is annotated with `@BeforeClass` and initializes the `classData` variable to 10.\n",
+    "In the code snippet, we have a test class `PersistenceTest` with a suite-level data variable `classData`. The `setupSuite()` method is annotated with `@BeforeClass` and initializes the `classData` variable to 10.\n",
     "\n",
     "The test cases `test1()`, `test2()`, and `test3()` demonstrate the persistence of the `classData` variable between tests. In `test1()`, we access the initial value of `classData` (10) and assert that it is equal to the expected value. In `test2()`, we modify the value of `classData` to 20 and assert the updated value. Finally, in `test3()`, we access the modified value of `classData` and assert it again.\n",
     "\n",
