--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -223,7 +223,7 @@
     "Explanation:\n",
     "In Java, there are two floating-point types: `float` and `double`. The `float` type is a single-precision 32-bit floating-point number, while the `double` type is a double-precision 64-bit floating-point number.\n",
     "\n",
-    "In the code snippet above, we demonstrate the declaration and initialization of variables of both `float` and `double` types. We also show different ways to assign values to these variables, including using literals and casting.\n",
+    "In the code snippet, we demonstrate the declaration and initialization of variables of both `float` and `double` types. We also show different ways to assign values to these variables, including using literals and casting.\n",
     "\n",
     "After declaring and initializing the variables, we print their values using `System.out.println()`. The expected output is mentioned as comments next to each print statement.\n",
     "\n",
@@ -292,7 +292,7 @@
     "Explanation:\n",
     "In Java, constants are declared using the `final` keyword. Once a variable is declared as a constant, its value cannot be changed throughout the program. Constants are often used to represent fixed values that should not be modified.\n",
     "\n",
-    "In the code snippet above, we demonstrate the usage of constants in Java. We declare a constant variable `MAX_VALUE` and initialize it with the value `100`. Attempting to modify the constant variable will result in a compilation error.\n",
+    "In the code snippet, we demonstrate the usage of constants in Java. We declare a constant variable `MAX_VALUE` and initialize it with the value `100`. Attempting to modify the constant variable will result in a compilation error.\n",
     "\n",
     "Multiple constants can be declared in a single line, as shown with the `PI` and `E` constants.\n",
     "\n",
@@ -649,7 +649,7 @@
     "Explanation:\n",
     "In Java, nullability refers to whether a variable can hold a null value or not. By default, variables in Java can hold null values, making them nullable. However, it is also possible to declare variables as non-nullable using the `@NonNull` annotation or by using a third-party library like `@Nullable` or `@NotNull`.\n",
     "\n",
-    "In the code snippet above, we demonstrate the concept of nullability in Java. We declare a nullable variable `nullableString` and a non-nullable variable `nonNullableString`. We then demonstrate various operations on these variables, such as assigning values, checking for null, and using them in method calls.\n",
+    "In the code snippet, we demonstrate the concept of nullability in Java. We declare a nullable variable `nullableString` and a non-nullable variable `nonNullableString`. We then demonstrate various operations on these variables, such as assigning values, checking for null, and using them in method calls.\n",
     "\n",
     "Understanding nullability is important in Java to ensure proper handling of null values and avoid null pointer exceptions in your code.\n",
     "\n",
@@ -824,7 +824,7 @@
     "- Reference variables can be assigned `null` or a reference to an object.\n",
     "- Mutable objects can be modified after creation, while immutable objects cannot be changed once created.\n",
     "\n",
-    "In the code snippet above, we demonstrate the following:\n",
+    "In the code snippet, we demonstrate the following:\n",
     "- Declaring and initializing a primitive variable (`num1`).\n",
     "- Declaring and initializing a reference variable (`str1`).\n",
     "- Declaring a reference variable without initialization (`str2`).\n",
@@ -910,7 +910,7 @@
     "Explanation:\n",
     "In Java, type inference allows the compiler to automatically determine the type of a variable based on its initializer expression. This reduces the need for explicit type declarations, making the code more concise and readable.\n",
     "\n",
-    "In the code snippet above, we demonstrate type inference in various scenarios. \n",
+    "In the code snippet, we demonstrate type inference in various scenarios. \n",
     "\n",
     "1. In variable declaration, the `var` keyword is used to declare variables without explicitly specifying their types. The compiler infers the types based on the initializer expressions. We demonstrate this by declaring variables `name`, `age`, `salary`, and `isEmployed` with different types (`String`, `int`, `double`, and `boolean` respectively) and printing their values.\n",
     "\n",
@@ -1205,7 +1205,7 @@
     "Explanation:\n",
     "In Java, variables have a specific lifetime, which is the duration for which they exist and hold their values. The lifetime of a variable depends on its scope, which is determined by where the variable is declared.\n",
     "\n",
-    "In the code snippet above, we demonstrate the lifetime of variables in different scopes:\n",
+    "In the code snippet, we demonstrate the lifetime of variables in different scopes:\n",
     "\n",
     "1. Local Variables:\n",
     "   - `x` is a local variable declared in the `main` method. It has a block scope and exists until the end of the block.\n",
@@ -1710,7 +1710,7 @@
     "Explanation:\n",
     "In Java, comparing floating-point numbers for equality can be tricky due to the way they are represented in memory. Floating-point numbers are stored as binary fractions, and some decimal numbers cannot be represented exactly in binary. This can lead to unexpected results when comparing floats or doubles using the `==` operator.\n",
     "\n",
-    "In the code snippet above, we demonstrate two scenarios: comparing floats and comparing doubles for equality.\n",
+    "In the code snippet, we demonstrate two scenarios: comparing floats and comparing doubles for equality.\n",
     "\n",
     "For floats, we declare two variables `a` and `b` with values `0.1f` and `0.2f` respectively. We then check if the sum of `a` and `b` is equal to `0.3f` using the `==` operator. However, due to the imprecise representation of floating-point numbers, the result is `false`. To overcome this, we introduce a tolerance value and check if the absolute difference between the sum of `a` and `b` and `0.3f` is less than the tolerance. This approach provides a more accurate comparison and yields the expected result of `true`.\n",
     "\n",
@@ -1789,7 +1789,7 @@
     "- `char`: '\\u0000' (null character)\n",
     "- Reference types (e.g., objects): null\n",
     "\n",
-    "In the code snippet above, we demonstrate the usage of uninitialized/default values in different contexts:\n",
+    "In the code snippet, we demonstrate the usage of uninitialized/default values in different contexts:\n",
     "\n",
     "1. Global variable: `globalVariable` is a static variable declared at the class level. It is automatically assigned the default value of 0.\n",
     "2. Local variable: `localVariable` is a local variable declared within the `main` method. Since it is not explicitly initialized, the compiler throws an error if we try to use it without assigning a value.\n",
